# dotdir

./: .gitignore  CLAUDE.md  CONTEXT.md  README.md  TERMINAL_ROADMAP.md  eslint.config.mjs  exts  index.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json  vite.config.ts  vite.web.config.ts
.cursor/rules/: git-workflow.mdc
.dir/: settings.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml  publish-ui.yml  release.yml
docs/: extensions-architecture.md  keyboard-interaction-architecture.md  viewer-editor-extensions-architecture.md
extensions/faraday-editor-monaco/: editor.js  package.json
extensions/faraday-viewers-basic/: image-viewer.js  package.json  text-viewer.js
public/: sw.js
src/: ActionBar.tsx  CommandLine.tsx  CommandPalette.tsx  ConflictDialog.tsx  CopyConfigDialog.tsx  CopyProgressDialog.tsx  DeleteProgressDialog.tsx  ErrorBoundary.tsx  ExtensionContainer.tsx  ExtensionsPanel.tsx  FileEditor.tsx  FileViewer.tsx  HelpDialog.tsx  ImageViewer.tsx  MakeFolderDialog.tsx  ModalDialog.tsx  MoveConfigDialog.tsx  OpenCreateFileDialog.tsx  PanelGroup.tsx  RenameDialog.tsx  Terminal.tsx  actionQueue.ts  app.tsx  atoms.ts  auth.ts  bridge.ts  browserExtensionHost.ts  browserFsProvider.ts  builtInCommandContributions.ts  commandLineCd.ts  commands.ts  containerPath.ts  deleteHelpers.ts  dialogContext.tsx  dialogHotkeys.tsx  editorExtensionCache.ts  extensionApi.ts  extensionHost.worker.ts  extensionHostClient.ts  extensionLoader.ts  (+40 more)
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/dotdir-core/: Cargo.toml
src-tauri/dotdir-core/src/: copy.rs  lib.rs  search.rs
src-tauri/faraday-core/: Cargo.toml
src-tauri/faraday-core/src/: copy.rs  delete.rs  error.rs  lib.rs  move_op.rs  ops.rs  proto.rs  watch.rs
src-tauri/icons/: icon.icns
src-tauri/src/: elevate.rs  elevate_stub.rs  extensions_install.rs  fsprovider.rs  lib.rs  main.rs  pty.rs  rpc.rs  runtime_ops.rs  serve.rs
src-tauri/src/vfs_virtual/: comlink.mjs  inline_bootstrap_postmsg.js
src/FileList/: Breadcrumbs.tsx  ColumnsScroller.tsx  FileList.tsx  PanelTabs.tsx  ScrollableContainer.tsx  useElementSize.ts
src/components/: AccountWidget.module.css  AccountWidget.tsx  AppChrome.module.css  AppChrome.tsx  ExtensionContainer.tsx  ExtensionsPanel.tsx
src/dialogs/: ConflictDialog.tsx  CopyConfigDialog.tsx  CopyProgressDialog.tsx  DeleteProgressDialog.tsx  MakeFolderDialog.tsx  ModalDialog.tsx  MoveConfigDialog.tsx  RenameDialog.tsx  dialogContext.tsx  dialogHotkeys.tsx
src/hooks/: useAuth.ts  useBuiltInCommands.ts  useExtensionHost.ts  useFileOperations.ts  useMediaQuery.ts  usePanel.ts  useTerminal.tsx  useUserSettings.ts
src/styles/: action-bar.css  base.css  command-palette.css  dialogs.css  extensions.css  file-list.css  help-dialog.css  panels.css  terminal.css  viewers.css
src/terminal/: TerminalService.ts  TerminalSession.ts  TerminalView.tsx  parser.ts  path.ts  shellProfiles.ts  terminalAtoms.ts  (+2 more)
(+10 files in other folders)
