[package]
name = "faraday"
version = "0.1.0"
description = "Faraday File Manager"
authors = ["Mikhail Isupov"]
edition = "2021"

[workspace]
members = ["faraday-core"]

[lib]
name = "faraday_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-http = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
faraday-core = { path = "faraday-core" }
dirs = "6"
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
rust-embed = { version = "8", features = ["mime-guess"] }
mime_guess = "2"
portable-pty = "0.8"

[profile.release.package.wry]
debug = true
debug-assertions = true

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Console",
    "Win32_System_IO",
    "Win32_System_Threading",
    "Win32_System_Pipes",
    "Win32_Storage_FileSystem",
] }
