[package]
name = "faraday-core"
version = "0.1.0"
edition = "2021"

[dependencies]
byteorder = "1"
notify = { version = "7", features = ["macos_fsevent"] }
parking_lot = "0.12"
thiserror = "2"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Storage_FileSystem"] }

[dev-dependencies]
tempfile = "3"
